fix: make dark mode readable
[finishes #183568425]

--- a/src/components/ActionButtons/styles.module.css
+++ b/src/components/ActionButtons/styles.module.css
@@ -20,4 +20,5 @@
 .buttons a {
   margin: 0 0 0 -1rem;
   font-size: 1.5rem;
+  color: #fff;
 }
