--- a/src/components/HomepageFeatures/styles.module.css
+++ b/src/components/HomepageFeatures/styles.module.css
@@ -1,3 +1,11 @@
+:root {
+  --feature-box-color: #fff;
+}
+
+[data-theme='dark'] {
+  --feature-box-color: #1b1b1d;
+}
+
 .features {
   display: flex;
   align-items: center;
@@ -10,7 +18,7 @@
 }
 
 .featureContent {
-  background-color: #ffffff;
+  background-color: var(--feature-box-color);
   height: 90%;
   font-size: 0.9rem;
 }
