--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -19,7 +19,7 @@
 
   --heading-color: #3e4656;
   --color-purple: #940dae;
-  --color-shell-symbol: #a9a9a9;
+  --color-shell-symbol: #4ff579;
 }
 
 /* For readability concerns, you should choose a lighter palette in dark mode. */
