--- a/src/pages/index.module.css
+++ b/src/pages/index.module.css
@@ -15,6 +15,7 @@
   background-repeat: no-repeat;
   background-size: cover;
   font-family: helvetica-w01-light,helvetica-w02-light,sans-serif;
+  color: #fff;
 }
 
 .heroContainer {
@@ -29,7 +30,6 @@
 }
 
 .promises {
-  color: #3E4656;
   font-family: helvetica-w01-light,helvetica-w02-light,sans-serif;
   font-size: 18px;
   line-height: 1.8em;
